# ChgOps

./: Cargo.toml  README.md  playbook.yaml
collections/: README.md
collections/demo/: vars.yaml
collections/demo/basic/: vars.yaml
collections/demo/basic/core/: vars.yaml
collections/dx/: README.md
collections/dx/azure/: README.md  vars.yaml
collections/dx/azure/blueprint/: blueprint1.yaml
collections/dx/azure/blueprint1/: README.md  vars.yaml
collections/dx/azure/blueprint2/: vars.yaml
docs/: README.md  product_ideas.md
playbooks/workspace1/: README.md  config.yaml  playbook copy.yaml  playbook.yaml  vars.yaml
playbooks/workspace1/vars/: vars.yaml
playbooks/workspace2/: README.md  config.yaml  playbook.yaml  plydir.yaml  plyreg.yaml  plyreg1.yaml  plywhen.yaml  vars.yaml
playbooks/workspace2/templates/: final.yaml  merged.yaml  playbook_s1.yaml
playbooks/workspace2/vars/: config.yaml
playbooks/workspace2/vars/dev/: vars.yaml
playbooks/workspace3/: ado_pipe.yaml  playbook.yaml
playbooks/workspace3/vars/: vars.yaml
src/: README.md  main.rs  playbook_engine.rs
src/collections/: README.md  mod.rs
src/collections/dx/: README.md  config_proc.rs  files_and_dirs.rs  mod.rs  yaml_handler.rs
src/collections/dx/azure/: README.md  cli.rs  mod.rs  tasks.rs
src/collections/dx/core/: README.md  filters.rs  mod.rs  shell.rs  tasks.rs
src/command_line/: README.md  mod.rs
src/command_line/collection/: mod.rs
src/command_line/init/: mod.rs
temp/: final.yaml  merged.yaml  playbook_s1.yaml
