[package]
name = "chgops"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Change Management and Operations"
repository = "https://github.dev/deixei/ChgOps"
homepage = "https://github.dev/deixei/ChgOps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"