[package]
name = "chgops"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Change Management and Operations"
repository = "https://github.dev/deixei/ChgOps"
homepage = "https://github.dev/deixei/ChgOps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1"
clap = "4.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2.3"
lazy_static = "1.4"
yaml-rust2 = "0.8"
tera = "1"
regex = "1.10.4"
hashlink = "0.8.4"
yaml-merge-keys = "0.7.0"
colored = "2.1.0"
base64 = "0.22.1"